--- a/configs/config.env
+++ b/configs/config.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=7544234270:AAFNrnZvYh2EsjJrUIYeRJTUmh-UAsZIeVU
-API_KEY=d940c30ad420b91ea0730caa54764251
+TELEGRAM_BOT_TOKEN=
+API_KEY=
