--- a/.github/workflows/main_pipeline.yml
+++ b/.github/workflows/main_pipeline.yml
@@ -19,7 +19,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60
-  build:
+  test:
     needs: lint
     runs-on: ubuntu-latest
     steps:
@@ -34,3 +34,60 @@ jobs:
         run: go build -v ./...
       - name: Test with the Go CLI
         run: go test
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64
+          file: ./infrastructure/docker/Dockerfile
+          push: true
+          target: prod
+          tags: ghcr.io/${{ github.repository }}/demo-app:${{ github.sha }}
+
+  deploy:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Kubernetes set context
+        uses: Azure/k8s-set-context@v3
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+
+      - name: Deploy
+        uses: Azure/k8s-deploy@v4.4
+        with:
+          action: deploy
+          strategy: basic
+          imagepullsecrets: |
+            dockerconfigjson-github-com
+          manifests: |
+            ./infrastructure/kubernetes/demo-app-deployment.yml
+            ./infrastructure/kubernetes/demo-app-service.yml
+            ./infrastructure/kubernetes/demo-app-ingress.yml
+          images: ghcr.io/${{ github.repository }}/demo-app:${{ github.sha }}
